# CausalFlow

./: .gitignore  ARCH.md  ARCHITECTURE.md  MANIFEST.in  README.md  doc.md  pyproject.toml  setup.py
causalflow/: __init__.py
causalflow/core/: __init__.py  gppom_hsic.py
causalflow/models/: __init__.py  analysis.py  causalflow.py  trainer.py
tests/: test_sachs_all.py
