[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalflow"
version = "1.0.0"
description = "An advanced multivariate causal discovery framework using Gaussian Processes and Neural Spline Flows."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Manh Thai", email = "manht@example.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["causalflow*"]
